--- a/css/style.css
+++ b/css/style.css
@@ -1111,11 +1111,72 @@ select.form-control:not([size]):not([multiple]){
 
 
 
+.btn-play {
+	position: relative;
+	margin-top: 50px;
+	display: block;
+	box-sizing: content-box;
+	width: 16px;
+	height: 26px;
+	border-radius: 100%;
+	border: none;
+	outline: none !important;
+	padding: 18px 20px 20px 28px;
+	background: #FFFFFF;
+  }
+  
+  .btn-play:before {
+	content: "";
+	position: absolute;
+	z-index: 0;
+	left: 50%;
+	top: 50%;
+	transform: translateX(-50%) translateY(-50%);
+	display: block;
+	width: 60px;
+	height: 60px;
+	background: #FFFFFF;
+	border-radius: 100%;
+	animation: pulse-border 1500ms ease-out infinite;
+  }
+  
+  .btn-play:after {
+	content: "";
+	position: absolute;
+	z-index: 1;
+	left: 50%;
+	top: 50%;
+	transform: translateX(-50%) translateY(-50%);
+	display: block;
+	width: 60px;
+	height: 60px;
+	background: #cfcfcf;
+	border-radius: 100%;
+	transition: all 200ms;
+  }
+  
+  .btn-play span {
+	display: block;
+	position: relative;
+	z-index: 3;
+	width: 0;
+	height: 0;
+	left: -1px;
+	border-left: 16px solid #800000;
+	border-top: 11px solid transparent;
+	border-bottom: 11px solid transparent;
+  }
+  
 
-
-
-
-
+  .wp{
+	background: #01c954;
+	color: hsl(0, 0%, 100%);
+	padding: 5px 10px;
+	display: inline-block;
+	font-size: 18px;
+	font-weight: 500;
+	text-transform: uppercase;
+}
 
 
 
